package edu.fiuba.algo3.modelo.Vehiculos;

public class Moto {
}
